tests/miniJava/neg/000066_mutation.MiniJava
class java { int static void Main ( String [ ] java ) { { } } }
